# Sofa.Fenics

./: CMakeLists.txt  README.md  Sofa.FenicsConfig.cmake.in
examples/: backend.py  fenics-hyperelasticity.py  fenics.c  fenics.h  fenics_hyperelasticity.c  fenics_hyperelasticity.h  hyperelasticmaterial.py  saintvenantkirchoff.py
src/sofa/fenics/: config.h.in  init.cpp
src/sofa/fenics/forcefield/: HyperElasticForceField.cpp  HyperElasticForceField.h  Material.cpp  Material.h
